--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "chart.js": "^3.7.1",
     "framer-motion": "^6.2.9",
     "next": "12.1.4",
     "react": "18.0.0",
+    "react-chartjs-2": "^4.1.0",
     "react-dom": "18.0.0",
-    "react-intersection-observer": "^8.33.1",
-    "recharts": "^2.1.9"
+    "react-intersection-observer": "^8.33.1"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.2",
