--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.5.0",
     "chart.js": "^3.7.1",
     "framer-motion": "^6.2.9",
     "next": "12.1.4",
