--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.5.0",
+    "@svgr/webpack": "^6.2.1",
     "chart.js": "^3.7.1",
     "framer-motion": "^6.2.9",
     "next": "12.1.4",
